Refactor file and directory helper methods.